--- a/stile.css
+++ b/stile.css
@@ -1,1 +1,10 @@
-p {color:red;}
+h1 {
+    color: red;
+    font-size: 50px;
+    text-align: center;
+}
+p {
+    color:blue;
+    font-size: 30px;
+    text-align: justify;
+}
