--- a/stile.css
+++ b/stile.css
@@ -4,7 +4,7 @@ h1 {
     text-align: center;
 }
 p {
-    color:blue;
+    color:rgb(0, 255, 106);
     font-size: 30px;
     text-align: justify;
 }
