--- a/stile.css
+++ b/stile.css
@@ -1,10 +1,10 @@
 h1 {
-    color: red;
+    color: rgb(255, 238, 0);
     font-size: 50px;
     text-align: center;
 }
 p {
-    color:rgb(0, 255, 106);
+    color: black;
     font-size: 30px;
     text-align: justify;
 }
