--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color:rgb(224, 122, 122));
+    background-color:rgb(224, 122, 122);
 }
 #titulo {
     color: rgb(40, 153, 77);
