--- a/style.css
+++ b/style.css
@@ -16,3 +16,14 @@ body{
 .conteudo{
     background-color: rgb(187, 195, 195);
 }
+.listas{
+    font-size: 35px;
+    text-align: center;
+    color: black;
+    }
+.lista1{
+    list-style-position: inside;
+    }
+.lista2{
+    list-style: nome;
+}
