--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header{
     padding: px;
     color: rgb(45, 227, 78);
     font-size: 35px;
-    border-bottom: 5px solid ;
+    border-bottom: 5px solid red;
     background: rgb(222, 212, 212);
 }
 
